# python-aws-utility

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: unit-tests.yaml
docs/: README.md
lambda_layer/: Makefile
lambda_layer/no_deps/: requirements.txt
tests/: .coveragerc  __setup__.py  conftest.py  test___init__.py  test_client.py  test_secrets.py  test_sfn.py  test_ssm.py
tests/events/client/: 0101-create_boto3_client-client.json  0201-create_boto3_client-exc.json  0202-create_boto3_client-exc.json
tests/events/secrets/: 0101-get_secret_value-resp.json  0201-get_secret_value-key_err.json  0301-get_secret_value-exc.json
tests/events/sfn/: 0101-launch_sfn.json  0201-poll_sfn-status_succeeded.json  0201-poll_sfn.json  0202-poll_sfn-status_failed.json  0301-get_exec_hist.json
tests/events/ssm/: 0101-get_ssm_value-resp.json  0102-get_ssm_value-resp.json  0201-get_ssm_value-key_err.json  0301-get_ssm_value-exc.json
topshelfsoftware_aws_util/: __init__.py  client.py  secrets.py  sfn.py  ssm.py
