[build-system]
requires = ["poetry-core>=0.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "topshelfsoftware_aws_util"
version = "1.0.0"
description = "Utility functions for interacting with AWS."
license="MIT"
authors = [
    "Tanner Pubins <tannerp@topshelfsoftware.com>"
]
readme = "./docs/README.md"
repository = "https://github.com/topshelfsoftware/python-aws-utility"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26"
topshelfsoftware_polling = { git = "https://github.com/topshelfsoftware/python-polling.git", tag = "v0.1.0" }
topshelfsoftware_util = { git = "https://github.com/topshelfsoftware/python-utility.git", tag = "v2.0.0" }

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = []
extend-select = ["C901", "E501"]
mccabe.max-complexity = 10
